tdf#126994 ww8 export: Don't skip TOX end node

The section end node processes the section page break,
so skipping it after the Table Of Contents meant that a
page break here was lost.

This fix is specifically for DOCX although it could impact
.doc (which already worked, and still does) and .rtf
(which probably doesn't work with section end anyway).
Utlimately, it just calls OutputEndNode() for an end node,
so it shouldn't cause any difficulties.

Change-Id: Iabc4a734365febb2b3e3bfed7d3c954b4b01da34